# cochranblock-mail

./: .env.example  .gitignore  ARTIFACTS.md  Cargo.toml  README.md  TIMELINE.md
docs/: book.toml
docs/src/: introduction.md
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  main.rs  state.rs
frontend/src/components/: compose.rs  login.rs  mail.rs  message_list.rs  message_view.rs  mod.rs  sidebar.rs  totp_setup.rs
frontend/style/: main.css
server/: Cargo.toml
server/src/: assets.rs  config.rs  e2e.rs  lib.rs  server.rs  spam.rs
server/src/imap/: command.rs  fetch.rs  listener.rs  mod.rs  session.rs
server/src/smtp/: command.rs  listener.rs  mod.rs  session.rs
server/src/store/: error.rs  messages.rs  mod.rs  sessions.rs  users.rs
server/src/webmail/: auth.rs  mail.rs  mod.rs  rate_limit.rs  router.rs  session.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: config.rs  lib.rs  server.rs  store.rs
src/imap/: command.rs  session.rs
src/smtp/: command.rs  listener.rs  session.rs
