# Unlicense — cochranblock.org
# Contributors: GotEmCoach, Claude Sonnet 4.6

[workspace]
members = ["server", "shared", "frontend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Michael Cochran <mcochran@cochranblock.org>"]
license = "Unlicense"
repository = "https://github.com/cochranblock/cochranblock-mail"
homepage = "https://cochranblock.org"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
shared = { path = "shared" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
